--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   intl: ^0.19.0
   http: ^1.1.0
   flutter_launcher_icons: ^0.13.1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
